--- a/main.html
+++ b/main.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="./styles.css">
+    <title>Centered Text with Background Image</title>
+    <style>
+        body {
+            background-image: url('https://storage.googleapis.com/acciojob-open-file-collections/center-image.png');
+        }
+        h1 {
+            color: white;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <center>
+        <h1>Welcome to the new Era of Artificial intelligence</h1>
+    </center>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
