--- a/main.html
+++ b/main.html
@@ -2,15 +2,7 @@
 <html>
 <head>
     <title>Centered Text with Background Image</title>
-    <style>
-        body {
-            background-image: url('https://storage.googleapis.com/acciojob-open-file-collections/center-image.png');
-        }
-        h1 {
-            color: white;
-			text-align: center;
-        }
-    </style>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <center>
